# 2d_lidar_people_tracker

./: README.md  requirements.txt
.github/workflows/: main.yml
crowd_management_ros/: package.xml  setup.cfg  setup.py
crowd_management_ros/crowd_management_ros/: act_if_not_followed.py  detect_if_followed.py  pub_group_rviz.py
crowd_management_ros/launch/: crowd_management.launch.py  detect_following  detect_following.launch.py  pipeline.launch.py
detectors_ros/: package.xml  setup.cfg  setup.py
detectors_ros/config/: dr_spaam_ros.yaml  r1-viz.rviz  rpi.rviz  yolo.yaml
detectors_ros/detectors_ros/: back_sub.py  convert_scan_csv.py  dr_spaam_ros.py  extract_labels.py  segment_person_on_depth.py  yolo.py
detectors_ros/launch/: both.launch.py  dr_spaam_ros.launch.py  dr_spaam_ros_local.launch.py  dr_spaam_ros_remote.launch.py  yolo.launch.py
docker/: Dockerfile  build_docker.sh  docker_vars.sh  manage_docker.sh  run.sh
dr_spaam/cfgs/: dr_spaam_r1.yaml  drow_r1.yaml
dr_spaam/dr_spaam/: detector.py
dr_spaam/dr_spaam/datahandle/: drow_handle.py
dr_spaam/dr_spaam/dataset/: builder.py  drow_dataset.py
dr_spaam/dr_spaam/model/: dr_spaam_fn.py
dr_spaam/dr_spaam/utils/: jrdb_utils.py  precision_recall.py  utils.py
tracker_ros/: package.xml  setup.cfg  setup.py
tracker_ros/launch/: tracker_ros.launch.py
tracker_ros/tracker_ros/: jpda_tracker.py  jpda_tracker_publish_poses.py  plot_turret.py  remove_outliers.py  remove_outliers_rpi.py  remove_outliers_rpi_2.py  remove_outliers_rpi_3.py  tracker.py
